--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
             <div class="item" style="background-image: url(/img/test2.jpg);">
                 <div class="content">
                     <h1 class="name">Test2</h1>
-                    <p class="text">2222texttextqweqweqwe</p>
+                    <p class="text"><a href="https://github.com/Yl1a/js3.git" class="link">GitHub</a><br>
+                        qweqweqweqwe
+                    </p>
 
                     <button class="btn">See more</button>
                 </div>
