--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
             <div class="item" style="background-image: url(/img/test1.jpg);">
                 <div class="content">
                     <h1 class="name">Test1</h1>
-                    <p class="text">1111texttextqweqweqwe</p>
+                    <p class="text"><a href="https://github.com/Yl1a/js3.git" class="link">GitHub</a><br>
+                        qweqweqweqwe
+                    </p>
 
                     <button class="btn">See more</button>
                 </div>
@@ -37,7 +39,9 @@
             <div class="item" style="background-image: url(/img/test3.jpg);">
                 <div class="content">
                     <h1 class="name">Test3</h1>
-                    <p class="text">3333texttextqweqweqwe</p>
+                    <p class="text"><a href="https://github.com/Yl1a/js3.git" class="link">GitHub</a><br>
+                        qweqweqweqwe
+                    </p>
 
                     <button class="btn">See more</button>
                 </div>
@@ -45,7 +49,9 @@
             <div class="item" style="background-image: url(/img/test4.jpg);">
                 <div class="content">
                     <h1 class="name">Test4</h1>
-                    <p class="text">4444texttextqweqweqwe</p>
+                    <p class="text"><a href="https://github.com/Yl1a/js3.git" class="link">GitHub</a><br>
+                        qweqweqweqwe
+                    </p>
 
                     <button class="btn">See more</button>
                 </div>
@@ -53,7 +59,9 @@
             <div class="item" style="background-image: url(/img/test5.jpg);">
                 <div class="content">
                     <h1 class="name">Test5</h1>
-                    <p class="text">5555texttextqweqweqwe</p>
+                    <p class="text"><a href="https://github.com/Yl1a/js3.git" class="link">GitHub</a><br>
+                        qweqweqweqwe
+                    </p>
 
                     <button class="btn">See more</button>
                 </div>
@@ -61,7 +69,9 @@
             <div class="item" style="background-image: url(/img/test2.jpg);">
                 <div class="content">
                     <h1 class="name">Test6</h1>
-                    <p class="text">6666texttextqweqweqwe</p>
+                    <p class="text"><a href="https://github.com/Yl1a/js3.git" class="link">GitHub</a><br>
+                        qweqweqweqwe
+                    </p>
 
                     <button class="btn">See more</button>
                 </div>
