--- a/index.html
+++ b/index.html
@@ -4,87 +4,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="./js/main.js" defer></script>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
-
-
     <div class="container">
-        <div class="" id="slide">
-            <div class="item" style="background-image: url(/img/test1.jpg);">
-                <div class="content">
-                    <h1 class="name">Test1</h1>
-                    <p class="text"><a href="https://github.com/Yl1a/js3.git" class="link">GitHub</a><br>
-                        qweqweqweqwe
-                    </p>
+        <a href="https://github.com/Yl1a/js.git" class="link">GitHub</a>
 
-                    <button class="btn">See more</button>
+        <div class="qw_ans">
+            <div class="content">
+                <div class="accord">
+                    <div class="btn">вопрос 1</div>
+                    <div class="answer">
+                        <p class="text">
+                            111Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure rerum inventore
+                            sint
+                        </p>
+                    </div>
+                </div>
+                <div class="accord">
+                    <div class="btn">вопрос 2</div>
+                    <div class="answer">
+                        <p class="text">
+                            2222Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure rerum inventore
+                            sint
+                        </p>
+                    </div>
+                </div>
+                <div class="accord">
+                    <div class="btn">вопрос 3</div>
+                    <div class="answer">
+                        <p class="text">
+                            3333Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure rerum inventore
+                            sint
+                        </p>
+                    </div>
+                </div>
+
+                <div class="accord">
+                    <div class="btn">вопрос 4</div>
+                    <div class="answer">
+                        <p class="text">
+                            44444Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure rerum inventore
+                            sint
+                        </p>
+                    </div>
+                </div>
+
+                <div class="accord">
+                    <div class="btn">вопрос 5</div>
+                    <div class="answer">
+                        <p class="text">
+                            555Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure rerum inventore
+                            sint </p>
+                    </div>
                 </div>
             </div>
-            <div class="item" style="background-image: url(/img/test2.jpg);">
-                <div class="content">
-                    <h1 class="name">Test2</h1>
-                    <p class="text"><a href="https://github.com/Yl1a/js3.git" class="link">GitHub</a><br>
-                        qweqweqweqwe
-                    </p>
-
-                    <button class="btn">See more</button>
-                </div>
-            </div>
-            <div class="item" style="background-image: url(/img/test3.jpg);">
-                <div class="content">
-                    <h1 class="name">Test3</h1>
-                    <p class="text"><a href="https://github.com/Yl1a/js3.git" class="link">GitHub</a><br>
-                        qweqweqweqwe
-                    </p>
-
-                    <button class="btn">See more</button>
-                </div>
-            </div>
-            <div class="item" style="background-image: url(/img/test4.jpg);">
-                <div class="content">
-                    <h1 class="name">Test4</h1>
-                    <p class="text"><a href="https://github.com/Yl1a/js3.git" class="link">GitHub</a><br>
-                        qweqweqweqwe
-                    </p>
-
-                    <button class="btn">See more</button>
-                </div>
-            </div>
-            <div class="item" style="background-image: url(/img/test5.jpg);">
-                <div class="content">
-                    <h1 class="name">Test5</h1>
-                    <p class="text"><a href="https://github.com/Yl1a/js3.git" class="link">GitHub</a><br>
-                        qweqweqweqwe
-                    </p>
-
-                    <button class="btn">See more</button>
-                </div>
-            </div>
-            <div class="item" style="background-image: url(/img/test2.jpg);">
-                <div class="content">
-                    <h1 class="name">Test6</h1>
-                    <p class="text"><a href="https://github.com/Yl1a/js3.git" class="link">GitHub</a><br>
-                        qweqweqweqwe
-                    </p>
-
-                    <button class="btn">See more</button>
-                </div>
-            </div>
+            <img src="img/Madalina Cojocari_ Mysterious Disappearance.jpg" alt="ans_img" class="img">
         </div>
-        <div class="buttons">
-            <button id="prev"><i class="fa-solid fa-chevron-left"></i></button>
-            <button id="next"><i class="fa-solid fa-chevron-right"></i></button>
-        </div>
+        <!-- <button class="btn">Нажмите</button> -->
     </div>
-
-
-    <script src="js/main.js"></script>
 </body>
 
 </html>
