--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="container">
-        <a href="https://github.com/Yl1a/js.git" class="link">GitHub</a>
+        <a href="https://github.com/Yl1a/js3.git" class="link">GitHub</a>
 
         <div class="qw_ans">
             <div class="content">
