--- a/index.html
+++ b/index.html
@@ -4,71 +4,96 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <script src="./js/main.js" defer></script>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 
 <body>
-    <header>
-        <div class="container">
-            <div class="header_content">
-                <img src="assets/img/logo.svg" alt="logo" class="logo">
-                <ul class="menu">
-                    <li class="menu_item"><a href="#" class="link">Главная</a></li>
-                    <li class="menu_item"><a href="#" class="link">Каталог</a></li>
-                    <li class="menu_item"><a href="https://github.com/Yl1a/js3.git" class="link">GitHub</a></li>
-                </ul>
-            </div>
-        </div>
-    </header>
-    <main>
-        <div class="container">
-            <div class="main_content">
-                <div class="profile_info">
-                    <div class="profile_img">
-                        <div class="img"></div>
-                        <div class="border"></div>
-                    </div>
-                    <div class="info">
-                        <p class="text">Имя</p>
-                        <p class="text">почта@mail.ru</p>
-                    </div>
-                </div>
-                <div class="homes">
-                    <div class="homes_info">
-                        <h2 class="title">Заявки</h2>
-                        <div class="status">
-                            <div class="tub">
-                                <div class="status_item active" data-tab="#tab1">входящие</div>
-                                <div class="border_tub"></div>
-                            </div>
-                            <div class="tub">
-                                <div class="status_item" data-tab="#tab2">опубликованные</div>
-                                <div class="border_tub"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="homes_content active" id="tab1">
-                        <div class="homes_block_content">
-                            <div class="card_img"><img src="assets/img/Group 138.png" alt="card_img" class="img"></div>
-                            <div class="card_img"><img src="assets/img/Group 139.png" alt="card_img" class="img"></div>
-                            <div class="card_img"><img src="assets/img/Group 141.png" alt="card_img" class="img"></div>
-                            <div class="card_img"><img src="assets/img/Group 142.png" alt="card_img" class="img"></div>
-                        </div>
-                    </div>
-                    <div class="homes_content" id="tab2">
-                        <div class="homes_block_content">
-                            <div class="card_img"><img src="assets/img/Group 138.png" alt="card_img" class="img"></div>
-                            <div class="card_img"><img src="assets/img/Group 142.png" alt="card_img" class="img"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </main>
-    <footer></footer>
+    <div class="container">
+        <a href="https://github.com/Yl1a/js3.git" class="link">GitHub</a>
+        <div class="time">
+            <div class="time_block">
 
-    <script src="./assets/js/main.js"></script>
+                <h3>Поздравляю!</h3>
+                <p class="text">вы увидели секретное объявление</p>
+
+            </div>
+
+            <button class="time_btn">Увидеть его еще раз</button>
+        </div>
+
+        <div class="qw_ans" id="upper">
+            <div class="content">
+                <div class="accord">
+                    <div class="btn">вопрос 1</div>
+                    <div class="answer">
+                        <p class="text">
+                            111Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure rerum inventore
+                            sint
+                        </p>
+                    </div>
+                </div>
+                <div class="accord">
+                    <div class="btn">вопрос 2</div>
+                    <div class="answer">
+                        <p class="text">
+                            2222Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure rerum inventore
+                            sint
+                        </p>
+                    </div>
+                </div>
+                <div class="accord">
+                    <div class="btn">вопрос 3</div>
+                    <div class="answer">
+                        <p class="text">
+                            3333Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure rerum inventore
+                            sint
+                        </p>
+                    </div>
+                </div>
+
+                <div class="accord">
+                    <div class="btn">вопрос 4</div>
+                    <div class="answer">
+                        <p class="text">
+                            44444Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure rerum inventore
+                            sint
+                        </p>
+                    </div>
+                </div>
+
+                <div class="accord">
+                    <div class="btn">вопрос 5</div>
+                    <div class="answer">
+                        <p class="text">
+                            555Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure rerum inventore
+                            sint </p>
+                    </div>
+                </div>
+            </div>
+            <img src="img/Madalina Cojocari_ Mysterious Disappearance.jpg" alt="ans_img" class="img">
+        </div>
+
+        <div class="block">
+            <div class="clear_block"></div>
+            <div class="clear_block"></div>
+            <div class="clear_block"></div>
+            <div class="clear_block"></div>
+            <div class="clear_block"></div>
+            <div class="clear_block">
+                <p class="textBlock">пусто</p>
+            </div>
+            <div class="clear_block">
+                <p class="textBlock">Здесь пусто, вернитесь наверх -></p>
+            </div>
+            <button class="btnUp" onclick="#upper">наверх</button>
+        </div>
+        <!-- <button class="btn">Нажмите</button> -->
+    </div>
 </body>
 
 </html>
